Adding content - commented form

--- a/Ember/Views/Home/Index.cshtml
+++ b/Ember/Views/Home/Index.cshtml
@@ -1,12 +1,14 @@
-﻿<!-- ### MAIN_TOP Module Position Section Start ### -->
+﻿@model Ember.Models.Contact
+
+<!-- ### MAIN_TOP Module Position Section Start ### -->
 <div class="joobstrap_section sourrounding_wrapper" id="main_top">
     <div class="inner_wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-md-3"><img class="img-circle img-responsive" src="~/Content/Template/img/sample_content1.jpg" style="margin-top:40px;" alt="young woman"></div>
+                <div class="col-md-3"><img class="img-circle img-responsive" src="~/Content/Template/img/sample_content26.jpg" style="margin-top:40px;" alt="young woman"></div>
                 <div class="col-md-9 text-left">
                     <h2 class="module-title"><span>What</span> our customers say</h2>
-                    <h5 class="huge">EMBERLABS has been a saving grace when it comes to our IT needs.</h5>
+                    <h5 class="huge">EMBERLABS has been a saving grace when it comes to our IT needs...</h5>
                     <p><em>
                             I am the president of my company and I do not know anything about computers. It is a great assurance to have EMBERLABS. Even
                             when I was living or traveling abroad they would call me back within a very short time and fix the problem. Now after a few years
@@ -26,3 +28,22 @@
     </div>
 </div>
 <!-- ### MAIN_TOP Module Position Section End ### -->
+
+@*@section ContactMessage{
+    @using (Html.BeginForm()) { 
+        @Html.ValidationSummary(true)
+        
+        <fieldset>
+            <legend>Send us a message</legend>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Name)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Name)
+                @Html.ValidationMessageFor(model => model.Name)
+            </div>
+        </fieldset>
+        <p><input type="submit" value="Submit" class="btn btn-primary" /></p>
+    }
+
+}*@
