--- a/Ember/Views/Shared/_Layout.cshtml
+++ b/Ember/Views/Shared/_Layout.cshtml
@@ -66,12 +66,27 @@
                 <div class="inner_wrapper">
                     <div class="container">
                         <div class="row">
-                            <div class="col-md-12 moduletable text-center  animated fadeIn">
-                                <h2>@ViewBag.Tagline</h2>
-                                <a href="#footer_center" class="btn btn-lg btn-info"><i class="icon-ok-circle"></i> Do you want to work with us?</a>
+                            <div class="col-md-5 moduletable text-center  animated fadeIn">
+                                
+                            </div>
+                            <div class="col-md-7 moduletable text-center  animated fadeIn">
+
+                                <img src="~/Content/Template/img/ember_logo.jpg" alt="logo" class="img-responsive" />
+                                
                             </div>
                         </div>
                     </div>
+
+                    <div class="container">
+                            <div class="row">
+                              
+                                <div class="col-md-12 moduletable text-center  animated fadeIn">
+
+                                    <h2>@ViewBag.Tagline</h2>
+                                    <a href="#footer_center" class="btn btn-lg btn-info"><i class="icon-ok-circle"></i> Do you want to work with us?</a>
+                                </div>
+                            </div>
+                        </div>
                 </div>
             </div>
             <!-- ### HEADER_TOP Module Position Section End ### -->
